# prectime

./: LICENSE  pyproject.toml
src/prectime/: __init__.py
